# llm-debate-agent

./: .editorconfig  .gitignore  COMPLIANCE_RECHECK.md  Makefile  README.md  REPORT.md  judge_panel3_console.txt  novelty_rebuttal_pilot10.txt
artifacts/run_20260317T042415Z_b57eea67/: failure_patterns.json  failure_patterns.md  metrics_table.md  run_20260317T042415Z_b57eea67.summary.json  stats_summary.md  summary.json
backend/: .env.example  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
backend/src/: __init__.py  app.py  baselines.py  config.py  debate.py  debater_agent.py  eval.py  judge_agent.py  logs.py  openai_client.py  prompts.py  types.py
backend/tests/: test_baselines.py  test_compare_judge_modes.py  test_debate.py  test_eval.py  test_report_artifacts.py
data/: README.md  sample_questions.jsonl  strategyqa_120.jsonl  strategyqa_120_metadata.json  strategyqa_120_preview.md
prompts/: debater_a.txt  debater_b.txt  direct_qa.txt  judge.txt  jury_deliberation.txt  self_consistency.txt
runs/: README.md  run_20260317T042415Z_b57eea67.jsonl  run_20260317T042415Z_b57eea67.summary.json  run_20260318T045614Z_0cf78544.jsonl  run_20260318T045614Z_0cf78544.summary.json  run_20260318T193321Z_722078f5.jsonl  run_20260318T193321Z_722078f5.summary.json
scripts/: backfill_run_metadata.py  compare_judge_modes.py  dev.sh  fmt.sh  generate_report_artifacts.py  rejudge_run_with_panel.py  run_experiment.py  test.sh
web/: README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
(+43 files in other folders)
